--- a/test.tex
+++ b/test.tex
@@ -1,6 +1,6 @@
 git add .
 
-git commit -m "3.5 Delete and Update part Two"
+git commit -m "4.1 Preview Images part Two "
 
 git push origin master
 
