#4.3 File URL and Nweet

--- a/test.tex
+++ b/test.tex
@@ -1,8 +1,14 @@
 git add .
-
-git commit -m "#4.2 Uploading "
-
+git commit -m "#4.3 File URL and Nweet"
 git push origin master
+
+
+
+git add .
+git commit -m "#5 CONCLUSIONS end"
+git push -u origin main
 
 rm -rf 지울폴더
 지정한 폴더 묻지도 따지지도 않고 전부 지우기
+
+git clone https://github.com/DragooCho/nwitter.git
