#4.3 File URL and Nweet

--- a/test.tex
+++ b/test.tex
@@ -12,3 +12,18 @@ rm -rf 지울폴더
 지정한 폴더 묻지도 따지지도 않고 전부 지우기
 
 git clone https://github.com/DragooCho/nwitter.git
+
+
+
+git fetch
+패치하면 원격 저장소의 최신 업데이트 내용을 로컬에 가져올 수 있다.
+가져온 변경사항을 현재 브랜치와 머지하려면 pull 명령어를 사용한다.
+
+git pull origin master
+원격 저장소의 변경 내용을 가져와 로컬 저장소에 반영된다. 패스트 포워드가 가능하면 바로 반영하고 그렇지 않으면 머지 커밋을 추가로 만든다.
+
+내가 작업한 내용을 깨끗히 유지하고 싶으면 머지 커밋을 만들지 않고 리베이스로 변경사항을 반영할 수도 있다.
+
+git pull origin maseter --rebase
+이렇게 하면 원격저장소에 있는 변경사항을 먼저 쌓고 그 위에 내가 작업한 변경사항을 쌓는 방식이다.
+나는 머지보다는 리베이스를 선호하는 편이다. 커밋 그래프를 좀더 단순하게 유지하고 싶어서 그렇다.
